# P8OPCL2

./: README_optiWeb.md  build_feature_web.ipynb  ml_quickstart.ipynb  optiweb_parms.ipynb  optiweb_pipelineTest.ipynb  optiweb_topk.ipynb  pyproject.toml
app/: EDA.ipynb  config.py  features_optiweb.py
backend/: main.py
frontend/: app.py
frontend/mlruns/0/: meta.yaml
tests/: test_api.py
