[tool.poetry]
name = "p6"
version = "0.1.0"
description = "P8-tracking model with mlflow, and saving log with pg, into a docker."
authors = ["qneaub"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~=1.26.4"     # pour compat SHAP/numba
pandas = "<2.3"        # si besoin pour compat
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
mlflow = "*"
optuna = "*"
lightgbm = "*"
pyyaml = "*"
shap = "*"
ipykernel = "^6.30.1"
xgboost = "^3.0.4"
catboost = "^1.2.8"
fastapi = "^0.121.1"
psycopg2-binary = "^2.9.11"
joblib = "^1.5.2"
evidently = "0.6.7"
streamlit = "^1.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
